<resources>
    <string name="app_name">FCN Minner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Email Verify</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">About</string>

    <string name="company_name">9 Fruit Creative Team</string>
    <string name="company_email">contactnineteam@gmail.com</string>
    <string name="about_about">About Us</string>
    <string name="about_contact">Contact Us</string>
    <string name="title_activity_maps">Map</string>
    <string name="balanceTittle">Balance</string>
    <string name="hashTitle">H/S</string>
    <string name="currentTitle">Current Earnings</string>
</resources>
