<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="387dp"
        android:layout_height="256dp"
        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/balance_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/balanceTittle"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:src="@drawable/fruit_coin" />

            <TextView
                android:id="@+id/text_saldo_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textAlignment="textStart"
                android:textSize="42sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleHashPerSecond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/hashTitle" />

            <TextView
                android:id="@+id/titlteCurrentHash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/currentTitle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hashPerSecond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="" />

            <TextView
                android:id="@+id/currentHash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/startHash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Minning" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="113dp"
        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            android:textSize="32sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bitcoin Rate" />
        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/bitcoinRate"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>